--- a/mariadb-replication/templates/server.cnf.j2
+++ b/mariadb-replication/templates/server.cnf.j2
@@ -41,7 +41,7 @@ skip_slave_start = 1
 
 ## innodb ###
 innodb_buffer_pool_size = 11469M
-innodb_buffer_pool_instances = 8
+innodb_buffer_pool_instances = {{ mysql_innodb_buffer_pool_instances }}
 innodb_file_per_table = 1 # Is the recommended way nowadays 
 innodb_io_capacity = 800
 innodb_flush_method=O_DIRECT
